# aws-sdk-neko

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Earthfile  README.md  appveyor.yml  haxelib.json  test.hxml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
lib/: aws.cpp
src/: aws.cpp
src/aws/: Aws.hx  Region.hx
src/aws/s3/: S3Client.hx  S3Errors.hx
src/aws/s3/model/: DeleteObjectRequest.hx
src/aws/transfer/: DownloadFileRequest.hx  S3FileRequest.hx  TransferClient.hx  TransferHandle.hx  TransferManager.hx  UploadFileRequest.hx
test/: Test.hx  TestS3Client_deleteObject.hx  TestTransferClient.hx  TestTransferManager.hx
